<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employeeFlow.RequestTimeOff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="360dp"
        android:layout_height="580dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="165dp"
                android:layout_height="37dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/select_date"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintBottom_toTopOf="@+id/outlinedStartDate"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedStartDate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:hint="@string/start_date"
                app:endIconDrawable="@drawable/date_icon"
                app:endIconMode="custom"
                app:helperText="MM/DD/YYYY"
                app:helperTextEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedEndDate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:hint="@string/end_date"
                app:endIconDrawable="@drawable/date_icon"
                app:endIconMode="custom"
                app:helperText="MM/DD/YYYY"
                app:helperTextEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="160dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/select_time"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                    app:layout_constraintBottom_toTopOf="@+id/outlinedStartTime"
                    app:layout_constraintEnd_toStartOf="@+id/materialSwitch"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedEndDate"
                    app:layout_constraintVertical_bias="0.122" />



                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/materialSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:checked="false"
                    android:text="@string/all_day" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/start_time"
                    app:helperTextEnabled="true"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"

                    android:hint="@string/end_time"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/outlinedStartTime"
                    app:layout_constraintTop_toBottomOf="@+id/materialSwitch">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:inputType="none"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>






            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"

                android:hint="@string/select_reason"
                >


                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/reasons_array" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/sendButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Send"
                    />

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Cancel"
                    />

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>
